syntax = "proto3";

package disasters.v1;

option go_package = "github.com/mr1hm/go-disaster-alerts/gen/disasters/v1";

// DisasterService provides access to global disaster data from USGS and GDACS.
service DisasterService {
    // GetDisaster retrieves a single disaster by its unique ID.
    rpc GetDisaster(GetDisasterRequest) returns (Disaster);

    // ListDisasters returns a filtered list of disasters.
    rpc ListDisasters(ListDisastersRequest) returns (ListDisastersResponse);

    // StreamDisasters opens a server-side stream that pushes new significant disasters in real-time.
    // Only streams earthquakes >= 5.0 magnitude or other disasters with orange/red alert level.
    rpc StreamDisasters(StreamDisastersRequest) returns (stream Disaster);

    // AcknowledgeDisasters marks disasters as successfully posted to Discord.
    rpc AcknowledgeDisasters(AcknowledgeDisastersRequest) returns (AcknowledgeDisastersResponse);
}

message GetDisasterRequest {
    string id = 1;
}

// DisasterType represents the category of disaster.
enum DisasterType {
    UNSPECIFIED = 0;
    EARTHQUAKE = 1;
    FLOOD = 2;
    CYCLONE = 3;
    TSUNAMI = 4;
    VOLCANO = 5;
    WILDFIRE = 6;
    DROUGHT = 7;
}

// AlertLevel represents the severity level from GDACS.
enum AlertLevel {
    UNKNOWN = 0;
    GREEN = 1;
    ORANGE = 2;
    RED = 3;
}

message Disaster {
    string id = 1;
    string source = 2;
    DisasterType type = 3;
    string title = 4;
    double magnitude = 5;
    AlertLevel alert_level = 6;
    double latitude = 7;
    double longitude = 8;
    int64 timestamp = 9;
    string country = 10;
    string population = 11;
    string report_url = 12;
}

message ListDisastersRequest {
    int32 limit = 1;
    optional DisasterType type = 2;
    optional double min_magnitude = 3;
    optional AlertLevel alert_level = 4;
    optional AlertLevel min_alert_level = 5; // >= this level (e.g., ORANGE includes ORANGE and RED)
    optional bool discord_sent = 6;          // Filter by discord_sent status (false = unsent)
}

message ListDisastersResponse {
    repeated Disaster disasters = 1;
}

message StreamDisastersRequest {
    optional DisasterType type = 1;
    optional double min_magnitude = 2;
    optional AlertLevel alert_level = 3;
    optional AlertLevel min_alert_level = 4; // >= this level (e.g., ORANGE includes ORANGE and RED)
}

message AcknowledgeDisastersRequest {
    repeated string ids = 1; // Disaster IDs successfully posted to Discord
}

message AcknowledgeDisastersResponse {
    int64 acknowledged_count = 1; // Number of disasters marked as sent
}